--- a/research/suggestion/train.ipynb
+++ b/research/suggestion/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -675,11 +675,11 @@
       "Non-suggestions: 30\n",
       "Sample reviews:\n",
       "                                               review  is_suggestion\n",
-      "19  They ought to invest in more comfortable seating.              1\n",
-      "0   They should offer more vegetarian options on t...              1\n",
-      "18  The management could improve the acoustic desi...              1\n",
-      "6   The management should train their staff to be ...              1\n",
-      "49  The restaurant was too cold, we had to keep ou...              0\n",
+      "55  The restaurant has a great selection of craft ...              0\n",
+      "38  The wine selection complemented the menu perfe...              0\n",
+      "46  The cocktails were creative and beautifully pr...              0\n",
+      "29  The management should consider adding a coat c...              1\n",
+      "27  They should make their entrance more wheelchai...              1\n",
       "\n",
       "2. Training and evaluating the model...\n",
       "Training complete!\n",
